<resources>
    <string name="app_name">Know Yourself</string>
    <string name="action_settings">Settings</string>
    <string name="hint_emotion">The Exact Emotion You Felt…</string>
    <string name="hint_summary">Brief Summary of What Happened…</string>
    <string name="hint_story">Complete Summary of What Happened…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">0–10 Rating and Quick Summary Required to Save</string>
    <string name="add_pattern">Create a New Tag</string>
    <string name="button_pattern">Add Tag</string>
    <string name="default_text">Loading…</string>
    <string name="null_default">None</string>
    <string name="view_title">Feeling:</string>
    <string name="view_summary">Summary:</string>
    <string name="view_pattern">Tags:</string>
    <string name="view_story">Full Story:</string>
    <string name="view_rating">Rating:</string>
    <string name="hint_pattern">Describe the pattern you\'ve observed…</string>
    <string name="or">OR</string>
    <string name="andor">AND/OR</string>
    <string name="add_case">Add New Event</string>
    <string name="add_tag">Add Tag To Event</string>
    <string name="cancel">Cancel</string>
    <string name="empty_db">No entries yet! Add a new case with the button below!</string>
    <string name="removePattern">Remove Tag</string>
    <string name="delete_pattern">Delete Tag</string>
    <string name="edit_tag">Edit Tag</string>
    <string name="hint_edit_tag">Change Tag Name…</string>
    <string name="no_tag_selected">You Must Select a Tag First</string>
    <string name="tag_intent_button">Manage Tags</string>


</resources>