<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:minWidth="@dimen/min_width"
    android:layout_height="wrap_content">
    <TextView
        android:text = "@string/button_pattern"
        android:gravity = "center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height"
        android:scaleType="center"
        android:background="#FFFFBB33"
        android:textSize="30sp"
        android:contentDescription="@string/app_name" />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tagsSpinner"
        android:entries="@array/default_array"
        android:layout_margin="@dimen/big_padding"
        android:spinnerMode="dropdown" />
    <TextView
        android:text = "@string/or"
        android:gravity = "center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/min_height"
        android:scaleType="center"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/newPatternEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:hint="@string/add_pattern"
        android:inputType="text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/noBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/addTagBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_pattern" />
    </LinearLayout>
</LinearLayout>