<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_emotion_spinner"
        android:entries="@array/emotion_array"
        android:layout_margin="@dimen/big_padding"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/edit_emotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_emotion"
        android:inputType="textAutoComplete"
        android:gravity="top"
        android:background="@drawable/back"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/min_height"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_summary"
        android:inputType="textMultiLine"
        android:lines="3"
        android:minLines="2"
        android:gravity = "top"
        android:background="@drawable/back"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_margin="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edit_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_padding"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_story"
        android:inputType="textMultiLine"
        android:lines="8"
        android:minLines="5"
        android:gravity = "top"
        android:background="@drawable/back"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:minHeight="@dimen/min_height"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        android:layout_margin="@dimen/big_padding"
        android:textColor="@color/buttonLabel" />

</LinearLayout>