<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagActivity"
    android:layout_marginTop="@dimen/big_padding"
    android:layout_marginBottom="@dimen/big_padding"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/selectTagSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:layout_marginTop="8dp"
            android:entries="@array/default_array" />

        <TextView
            android:id="@+id/tagStatView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000000"
            />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/tagGraph"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight=".1"
            />

        <Button
            android:id="@+id/deleteTagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/big_padding"
            android:text="@string/delete_pattern" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/big_padding">

            <EditText
                android:id="@+id/editTagBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:fontFamily="sans-serif-light"
                android:gravity="top"
                android:hint="@string/hint_edit_tag"
                android:inputType="textAutoComplete"
                android:minHeight="@dimen/min_height"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="18sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/editTagButton"
                android:layout_weight=".7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_tag" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>